--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
                 </form>
 
                 <div class="description-box">
-                    <h2>Bun venit la DefenderX</h2> <!-- Subtitlul paginii -->
+                    <h2>Bun venit pe DefenderX</h2> <!-- Subtitlul paginii -->
                     <p>DefenderX este o platformă avansată de analiză a fișierelor, alimentată de VirusTotal. Oferă analize și rapoarte în timp real cu privire la riscurile și amenințările potențiale asociate cu fișierele și URL-urile. Încarcă un fișier sau introdu un URL pentru a începe.</p> <!-- Paragraful de descriere a platformei -->
                 </div>
 
